[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/Enemies/boss_idle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Inimigos/Boss/Boss.gd" type="Script" id=2]
[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=3]
[ext_resource path="res://Scenes/Inimigos/BarraHP.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Inimigos/Boss/BossBullet.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 258.622
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 600.0

[sub_resource type="CircleShape2D" id=3]
radius = 1000.0

[sub_resource type="CircleShape2D" id=4]
radius = 2000.0

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
player_state = ExtResource( 3 )
bouncing_duration = 1.0
bullet_scene = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16.9897, -39.6427 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RangeMelee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeMelee"]
shape = SubResource( 2 )

[node name="RangeSeguir" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeSeguir"]
shape = SubResource( 3 )

[node name="RangeAtirar" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeAtirar"]
shape = SubResource( 4 )

[node name="BouncingTimer" type="Timer" parent="."]
one_shot = true

[node name="RecuperandoTimer" type="Timer" parent="."]
one_shot = true

[node name="TiroCooldown" type="Timer" parent="."]
one_shot = true

[node name="BarraHP" parent="." instance=ExtResource( 4 )]
margin_left = -168.055
margin_top = -290.218
margin_right = 167.945
margin_bottom = -217.218
value = 50.0
nine_patch_stretch = true

[connection signal="body_entered" from="RangeMelee" to="." method="_on_RangeMelee_body_entered"]
[connection signal="body_exited" from="RangeMelee" to="." method="_on_RangeMelee_body_exited"]
[connection signal="body_entered" from="RangeSeguir" to="." method="_on_RangeSeguir_body_entered"]
[connection signal="body_exited" from="RangeSeguir" to="." method="_on_RangeSeguir_body_exited"]
[connection signal="body_entered" from="RangeAtirar" to="." method="_on_RangeAtirar_body_entered"]
[connection signal="body_exited" from="RangeAtirar" to="." method="_on_RangeAtirar_body_exited"]
[connection signal="timeout" from="BouncingTimer" to="." method="_on_BouncingTimer_timeout"]
